infra/k8s/product-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-mongo-depl
spec:
  selector:
    matchLabels:
      app: product-mongo
  template:
    metadata:
      labels:
        app: product-mongo
    spec:
      containers:
      - name: product-mongo
        image: mongo
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
  apiVersion: v1
  kind: Service
  metadata:
    name: product-mongo-srv
  spec:
    selector:
      app: product-mongo
    ports:
    - port: 27017
      targetPort: 27017
