infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-serivce
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: nice.dev
    http:
      paths:
        - path: "/?(.*)"
          pathType: Prefix
          backend:
            service:
              name: auth-srv
              port: 
                number: 3000
